# Midwicket

./: .env.example  .gitignore  Dockerfile  LICENSE  MANIFEST.in  PRODUCTION_READINESS_GAPS.md  README.md  docker-compose.yml  fix.md  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-serve.txt  requirements.in  requirements.txt  test_all_imports.py  test_core_functionality.py  test_metrics.py  test_query_types.py  validate_production.py
.github/workflows/: ci.yml
docs/: adapters.md  api.md  configuration.md
examples/: 03_ingest_world.py  04_venue_lookup.py  07_win_prediction.py  08_custom_matchup.py  09_fantasy_points.py  13_top_run_scorers.py  14_top_wicket_takers.py  25_full_analysis.py  26_report_plugin_demo.py  28_express_quickstart.py  29_win_probability.py  30_metrics_showcase.py  31_live_overlay_demo.py  32_client_sdk.py  33_session_and_registry.py  34_query_engine_demo.py  35_config_and_debug.py  36_full_library_tour.py  README.md
examples/plugins/: sample_plugin.py
midwicket/: __init__.py
monitoring/: prometheus.yml
pypitch/: __init__.py  client.py  config.py  exceptions.py  express.py  features.py  logging_config.py
pypitch/api/: fantasy.py  head_to_head.py  models.py  player_analytics.py  plugins.py  session.py  sim.py  stats.py  validation.py
pypitch/compute/: __init__.py  winprob.py
pypitch/core/: __init__.py  migration.py
pypitch/data/: __init__.py  loader.py  pipeline.py
pypitch/docs/: api.md  impact_player.md
pypitch/live/: ingestor.py  overlay.py
pypitch/models/: registry.py  train.py  win_features.py  win_predictor.py
pypitch/query/: base.py  defs.py
pypitch/runtime/: __init__.py  cache_duckdb.py  executor.py  modes.py  planner.py
pypitch/serve/: api.py  auth.py  monitoring.py  rate_limit.py  sql_guard.py
pypitch/storage/: engine.py  (+4 more)
scripts/: healthcheck.py  live_train_benchmark.py  train_win_model.py  validate_production.py
tests/: conftest.py  test_all_imports.py  test_analyze_contract.py  test_auth.py  test_auth_contract.py  test_auth_routes.py  test_cache_security.py  test_client_sdk_wiring.py  test_config.py  test_core_functionality.py  test_cricsheet_loader.py  test_data_loader.py  test_debug_mode.py  test_derived_store_planner.py  test_executor_planner.py  test_express.py  test_fantasy.py  test_invariants.py  test_live.py  test_metrics.py  test_midwicket_namespace.py  test_migration.py  test_player_analytics.py  test_plugin_e2e.py  test_plugins_validation.py  test_query_types.py  test_rate_limit_backends.py  test_registry.py  test_report_plugin.py  test_schema_and_utils.py  test_serve.py  test_sql_guard.py  test_storage_and_monitoring.py  test_win_model_training.py
(+20 files in other folders)
