[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pypitch"
version = "0.1.0"
authors = [
  { name="PyPitch Team", email="srjnupadhyay@gmail.com" },
]
description = "The Open Source Cricket Intelligence SDK"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "pyarrow>=14.0.0",
    "duckdb>=0.9.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "tqdm>=4.0.0",
    "requests>=2.0.0",
    "numpy>=1.20.0",
    "jinja2>=3.0.0",
    "httpx>=0.24.0",
    "psutil>=5.9.0",
    "sqlparse>=0.5.0",
]

[project.optional-dependencies]
serve = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "python-multipart>=0.0.6",
    "passlib[bcrypt]>=1.7.0",
    "python-jose[cryptography]>=3.3.0",
    "slowapi>=0.1.0",
]
viz = [
    "matplotlib>=3.5.0",
    "plotly>=5.0.0",
    "reportlab>=4.0.0",
]
ml = [
    "scikit-learn>=1.3.0",
]
dev = [
    "pypitch[serve,viz,ml]",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
    "pip-audit>=2.7.0",
]

[tool.pytest.ini_options]
addopts = "--cov=pypitch --cov-report=term-missing --cov-fail-under=70"

[project.urls]
"Homepage" = "https://github.com/CodersAcademy006/pypitch"
"Bug Tracker" = "https://github.com/CodersAcademy006/pypitch/issues"
"Documentation" = "https://github.com/CodersAcademy006/pypitch#readme"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = false

[[tool.mypy.overrides]]
module = ["pyarrow.*", "duckdb.*", "pandas.*", "tqdm.*", "numpy.*", "plotly.*", "reportlab.*", "sklearn.*"]
ignore_missing_imports = true

[tool.setuptools.packages.find]
include = ["pypitch*"]
exclude = ["data*", "examples*", "tests*"]

[tool.setuptools.package-data]
pypitch = ["py.typed", "models/data/*.json"]
